[gd_scene load_steps=7 format=3 uid="uid://cjv1q7mlg0hj1"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_1na3e"]
[ext_resource type="Texture2D" uid="uid://ds30h2susimku" path="res://Textures/Player/character2.png" id="1_gv42m"]
[ext_resource type="PackedScene" uid="uid://db5bs7cvvon5g" path="res://Utility/hurt_box_2.tscn" id="2_87vhw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0eae"]
size = Vector2(0.455535, 0.895526)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqhub"]
radius = 0.118102
height = 0.707576

[sub_resource type="CircleShape2D" id="CircleShape2D_cy7ba"]
radius = 6.19504

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(118.542, 90.4496)
script = ExtResource("1_1na3e")

[node name="HurtBox2" parent="." instance=ExtResource("2_87vhw")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox2" index="0"]
position = Vector2(0, -0.0276397)
shape = SubResource("RectangleShape2D_h0eae")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dqhub")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2.98023e-08)
scale = Vector2(0.00131929, 0.00195314)
texture = ExtResource("1_gv42m")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -7.45058e-09)
scale = Vector2(1036.03, 326.801)

[node name="Attack" type="Node2D" parent="."]

[node name="HötöTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="HötöAttackTimer" type="Timer" parent="Attack/HötöTimer"]
unique_name_in_owner = true
wait_time = 0.05

[node name="EnemyDetectionArea" type="Area2D" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(0.050615, 0.0442235)
monitorable = false

[node name="EnemyDetectionShape" type="CollisionShape2D" parent="EnemyDetectionArea"]
visible = false
position = Vector2(-0.050615, -0.0442235)
shape = SubResource("CircleShape2D_cy7ba")

[connection signal="hurt" from="HurtBox2" to="." method="_on_hurt_box_2_hurt"]
[connection signal="timeout" from="Attack/HötöTimer" to="." method="_on_hötötimer_timeout"]
[connection signal="timeout" from="Attack/HötöTimer/HötöAttackTimer" to="." method="_on_hötöattack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="HurtBox2"]
